github code changed to generation manager

--- a/generator/services/code-gen-manager/tsconfig.json
+++ b/generator/services/code-gen-manager/tsconfig.json
@@ -12,7 +12,7 @@
         "emitDecoratorMetadata": true
     },
     "include": [
-        "src/**/*.ts",
+        "src/**/*.ts", "../generation-manager/src/apiservices/GithubManagerService.ts",
     ],
     "exclude": [
         "node_modules"
