Admin and Auth gen Manager Changes for Front end component.

--- a/generator/services/auth-gen-manager/Dockerfile
+++ b/generator/services/auth-gen-manager/Dockerfile
@@ -1,6 +1,6 @@
 From node:10.14.2
-COPY . /Authorization-generation-manager
-WORKDIR /Authorization-generation-manager
+COPY . /auth-gen-manager
+WORKDIR /auth-gen-manager
 RUN npm i -g ts-node
 RUN npm install
 CMD npm run prod
