--- a/generator/services/auth-gen-manager/tsconfig.json
+++ b/generator/services/auth-gen-manager/tsconfig.json
@@ -7,10 +7,12 @@
         "resolveJsonModule": true,
         "target": "es6",
         "outDir": "./dist",
-        "baseUrl": "./lib"
+        "baseUrl": "./lib",
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
     },
     "include": [
-        "src/**/*.ts"
+        "src/**/*.ts",
     ],
     "exclude": [
         "node_modules"
