--- a/generator/services/auth-gen-manager/package.json
+++ b/generator/services/auth-gen-manager/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "auth-proxy",
+  "name": "authgenmanager",
   "version": "1.0.0",
-  "description": "\"Proxy to communicate between camunda\"",
+  "description": "To generate the Login Services",
   "main": "dist/server.js",
   "scripts": {
     "test": "ng test",
     "build": "tsc",
     "dev": "ts-node ./src/server.ts",
-    "start": "nodemon ./dist/server.js",
+    "start": "nodemon ./dist/src/server.js",
     "prod": "npm run build && npm run start"
   },
   "author": "kishan.r10decoders@gmail.com",
-  "license": "ISC",
+  "license": "",
   "dependencies": {
     "@types/express": "^4.16.1",
     "body-parser": "^1.18.3",
