--- a/generator/services/Admin-manager/package.json
+++ b/generator/services/Admin-manager/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
+    "stringtemplate-js": "^0.1.1",
     "http": "0.0.0",
     "mongoose": "^5.4.7",
     "node-async-loop": "^1.2.2",
