applicaton generated with login and signup component

--- a/generator/services/angular-template-manager/Dockerfile
+++ b/generator/services/angular-template-manager/Dockerfile
@@ -2,5 +2,6 @@ From node:10.14.2
 COPY . /angulartemplatemanager
 WORKDIR /angulartemplatemanager
 RUN npm install
+RUN npm install -g @angular/cli
 RUN npm i -g ts-node
 CMD npm run prod
