--- a/generator/services/node-gen-manager/tsconfig.json
+++ b/generator/services/node-gen-manager/tsconfig.json
@@ -10,7 +10,7 @@
         "baseUrl": "./lib"
     },
     "include": [
-        "src/**/*.ts", "src/models/NodeModels.ts",
+        "src/**/*.ts",
     ],
     "exclude": [
         "node_modules"
