--- a/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/app-db-pod/mongo-pv.yaml
+++ b/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/app-db-pod/mongo-pv.yaml
@@ -6,8 +6,8 @@ metadata:
     type: local
 spec:
   capacity:
-    storage: 8Gi
+    storage: {{ .Values.persistentVolume.mongo.storage }}
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: /data/mongo/
+    path: /data/db/
