--- a/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/app-db-pod/app-db-service.yaml
+++ b/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/app-db-pod/app-db-service.yaml
@@ -11,5 +11,6 @@ spec:
  - name: mongo-db
    port: 27017
    targetPort: 27017
+   nodePort: 30027
  selector:
-   name: {{ .Values.app.prefix }}-app-db 
+   name: {{ .Values.app.prefix }}-app-db
