--- a/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/app-db-pod/mongo-pvc.yaml
+++ b/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/app-db-pod/mongo-pvc.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ .Values.app.prefix }}-app-mongo-data
-  namespace: {{ .Values.app.namepace }}
+  namespace: {{ .Values.app.namespace }}
 spec:
   accessModes:
   - ReadWriteOnce
   resources:
     requests:
-      storage: 5Gi
+      storage: {{ .Values.persistentVolumeClaim.mongo.storage }}
