--- a/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/system-entry-pod/system-entry-deployment.yaml
+++ b/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/system-entry-pod/system-entry-deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: {{ .Values.app.prefix }}-system-entry
+  name: {{ .Values.app.prefix }}-desktop
   namespace: {{ .Values.app.namespace }}
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: {{ .Values.app.prefix }}-system-entry
+        app: {{ .Values.app.prefix }}-desktop
     spec:
       containers:
-        - name: nginx-container
-          imagePullPolicy: IfNotPresent
-          image: tharanirajan/{{ .Values.app.prefix }}-system-entry:1.0
+        - name: {{ .Values.deployment.desktop.name }}-contianer
+          imagePullPolicy: {{ .Values.deployment.defaultImagePullPolicy }}
+          image: {{ .Values.deployment.desktop.image }}
           ports:
             - name: http-port
               containerPort: 80
