--- a/generator/services/configurationmanager/src/assests/configuration.json
+++ b/generator/services/configurationmanager/src/assests/configuration.json
@@ -2595,7 +2595,7 @@
 			"name": "authGenerationDirectory",
 			"label": "Auth Generation Directory",
 			"description": "Location for the Login generation seed files",
-			"value": "/geppetto/seed/",
+			"value": "/geppetto/template/seed",
 			"type": "AuthGeneration",
 			"sub_type": null	
 		},
@@ -2603,7 +2603,7 @@
 			"name": "authorizationDirectory",
 			"label": "Authorization Directory",
 			"description": "Location for the template path of the string template in the Auth gen manager",
-			"value": "../../template",
+			"value": "../../../template",
 			"type": "Authorization",
 			"sub_type": null	
 		},
@@ -2611,7 +2611,7 @@
 			"name": "adminManagerSeedDirectory",
 			"label": "Admin Manager Directory",
 			"description": "Location for the Admin Manager seed files",
-			"value": "/geppetto/seed/",
+			"value": "/geppetto/template/seed",
 			"type": "AdminManager",
 			"sub_type": null	
 		}
