--- a/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/app-pod/app-service.yaml
+++ b/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/app-pod/app-service.yaml
@@ -7,20 +7,20 @@ spec:
   type: NodePort
   ports:
   - name: {{ .Values.service.apigateway.name }}
-    port: 3000
-    targetPort: 3000
-    nodePort: 31234
+    port: {{ .Values.service.apigateway.port }}
+    targetPort: {{ .Values.service.apigateway.targetPort }}
+    nodePort: {{ .Values.service.apigateway.nodePort }}
   - name: {{ .Values.service.authproxy.name }}
-    port: 3009
-    targetPort: 3009
+    port: {{ .Values.service.authproxy.port }}
+    targetPort: {{ .Values.service.authproxy.targetPort }}
   - name: {{ .Values.service.camunda.name }}
-    port: 3008
-    targetPort: 3008
+    port: {{ .Values.service.camunda.port }}
+    targetPort: {{ .Values.service.camunda.targetPort }}
   - name: {{ .Values.service.security.name }}
-    port: 3007
-    targetPort: 3007
+    port: {{ .Values.service.security.port }}
+    targetPort: {{ .Values.service.security.targetPort }}
   - name: {{ .Values.service.admin.name }}
-    port: 3010
-    targetPort: 3010
+    port: {{ .Values.service.admin.port }}
+    targetPort: {{ .Values.service.admin.targetPort }}
   selector:
     app: {{ .Values.app.prefix }}-app
