menu generation completed

--- a/generator/services/auth-gen-manager/package.json
+++ b/generator/services/auth-gen-manager/package.json
@@ -26,11 +26,11 @@
     "make-dir": "^3.0.0",
     "mkdirp": "^0.5.1",
     "mongoose": "^5.4.7",
+    "nanoid-dictionary": "^2.0.0",
     "node-fetch": "^2.3.0",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
     "request": "^2.88.0",
-    "shortid": "^2.2.14",
     "stringtemplate-js": "^0.1.1",
     "typescript": "^3.2.4",
     "url-join": "^4.0.0",
