--- a/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/telemetry-pod/EFK/elasticsearch_statefulset.yaml
+++ b/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/telemetry-pod/EFK/elasticsearch_statefulset.yaml
@@ -12,18 +12,18 @@ spec:
   template:
     metadata:
       labels:
-	app: elasticsearch
+        app: elasticsearch
     spec:
       containers:
       - name: elasticsearch
         image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.4.3
         # resources:
         #     limits:
-        #	cpu: 500m
+        #       cpu: 500m
         #     requests:
-        #	cpu: 100m
+        #       cpu: 100m
         ports:
-	      - containerPort: 9200
+        - containerPort: 9200
           name: rest
           protocol: TCP
         - containerPort: 9300
@@ -59,7 +59,12 @@ spec:
         command: ["sysctl", "-w", "vm.max_map_count=262144"]
         securityContext:
           privileged: true
+      - name: increase-fd-ulimit
+        image: busybox
+        command: ["sh", "-c", "ulimit -n 65536"]
+        securityContext:
+          privileged: true
       volumes:
-	      - name: data
+        - name: data
           persistentVolumeClaim:
             claimName: data
