--- a/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/telemetry-pod/EFK/fluentd.yaml
+++ b/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/telemetry-pod/EFK/fluentd.yaml
@@ -50,7 +50,7 @@ spec:
   template:
     metadata:
       labels:
-	app: fluentd
+        app: fluentd
     spec:
       serviceAccount: fluentd
       serviceAccountName: fluentd
@@ -58,7 +58,7 @@ spec:
       - key: node-role.kubernetes.io/master
         effect: NoSchedule
       containers:
-      - name: 
+      - name: fluentd
         imagePullPolicy: {{ .Values.deployment.defaultImagePullPolicy }}
         image: fluent/fluentd-kubernetes-daemonset:v0.12-debian-elasticsearch
         env:
@@ -70,12 +70,9 @@ spec:
             value: "http"
           - name: FLUENT_UID
             value: "0"
-          - name: FLUENT_ELASTICSEARCH_USER
-            value: none
-          - name: FLUENT_ELASTICSEARCH_PASSWORD
-            value: none
           - name: FLUENT_ELASTICSEARCH_SED_DISABLE
             value: "true"
+          
         resources:
           limits:
             memory: 512Mi
@@ -83,25 +80,31 @@ spec:
             cpu: 100m
             memory: 200Mi
         ports:
-	      - containerPort: 24224
+        - containerPort: 24224    
         volumeMounts:
         # - name: fluentd-storage-volume
-        #   mountPath: /fluentd/etc
-          readOnly: false
+        #     mountPath: /fluentd/etc
         - name: varlog
           mountPath: /var/log
         - name: varlibdockercontainers
           mountPath: /var/lib/docker/containers
-          readOnly: true
+          readOnly: true 
       terminationGracePeriodSeconds: 30
       volumes:
-	      # - name: fluentd-storage-volume
+        # - name: fluentd-storage-volume
         #   configMap:
-        #    defaultMode: 0666
-        #    name: fluentd-kube-conf
+        #     name: fluentd-kube-conf
         - name: varlog
           hostPath:
             path: /var/log
         - name: varlibdockercontainers
           hostPath:
             path: /var/lib/docker/containers
+         
+
+  
+
+
+
+
+
