Ionic dockerfile changes

--- a/generator/services/ionic-manager/Dockerfile
+++ b/generator/services/ionic-manager/Dockerfile
@@ -3,5 +3,6 @@ COPY . /ionicmanager
 WORKDIR /ionicmanager
 RUN npm install
 RUN npm install -g @angular/cli
+RUN npm install -g cordova ionic
 RUN npm i -g ts-node
 CMD npm run prod
