--- a/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/system-entry-pod/system-entry-deployment.yaml
+++ b/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/system-entry-pod/system-entry-deployment.yaml
@@ -1,14 +1,14 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: {{ .Values.app.prefix }}-desktop
+  name: {{ .Values.app.prefix }}-system-entry
   namespace: {{ .Values.app.namespace }}
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: {{ .Values.app.prefix }}-desktop
+        app: {{ .Values.app.prefix }}-system-entry
     spec:
       containers:
         - name: {{ .Values.deployment.desktop.name }}-contianer
@@ -17,3 +17,9 @@ spec:
           ports:
             - name: http-port
               containerPort: 80
+        - name: {{ .Values.deployment.apigateway.name }}-container
+          imagePullPolicy: {{ .Values.deployment.defaultImagePullPolicy }}
+          image: {{ .Values.deployment.apigateway.image }}
+          ports:
+            - name: http-port
+              containerPort: 3000
