--- a/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/system-entry-pod/system-entry-service.yaml
+++ b/generator/services/infrastructure-manager/template/deployment/helm/static_contents/templates/system-entry-pod/system-entry-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.app.prefix }}-desktop
+  name: {{ .Values.app.prefix }}-system-entry
   namespace: {{ .Values.app.namespace }}
 spec:
   type: NodePort
@@ -9,5 +9,9 @@ spec:
   - name: nginx-app
     port: {{ .Values.service.desktop.port }}
     targetPort: {{ .Values.service.desktop.targetPort }}
+  - name: {{ .Values.service.apigateway.name }}
+    port: {{ .Values.service.apigateway.port }}
+    targetPort: {{ .Values.service.apigateway.targetPort }}
+    nodePort: {{ .Values.service.apigateway.nodePort }}
   selector:
-    app: {{ .Values.app.prefix }}-desktop
+    app: {{ .Values.app.prefix }}-system-entry
