--- a/generator/services/infrastructure-manager/package.json
+++ b/generator/services/infrastructure-manager/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
+    "jenkins": "^0.26.0",
     "mongoose": "^5.4.7",
     "ncp": "^2.0.0",
     "node-vault": "^0.9.5",
