helm charts updated

--- a/devops/helm/geppetto-dev/templates/app-db-pod/app-db-deployment.yaml
+++ b/devops/helm/geppetto-dev/templates/app-db-pod/app-db-deployment.yaml
@@ -11,9 +11,9 @@ spec:
         name: {{ .Values.app.prefix }}-app-db
     spec:
       containers:
-        - name: mongo-container
+        - name: {{ .Values.deployment.mongo.name}}-container
           imagePullPolicy: {{ .Values.deployment.defaultImagePullPolicy }}
-          image: mongo:3.2
+          image: {{ .Values.deployment.mongo.image }}
           ports:
             - name: http-port
               containerPort: 27017
