--- a/devops/helm/geppetto-dev/templates/system-entry-pod/system-entry-deployment.yaml
+++ b/devops/helm/geppetto-dev/templates/system-entry-pod/system-entry-deployment.yaml
@@ -11,15 +11,15 @@ spec:
         app: {{ .Values.app.prefix }}-system-entry
     spec:
       containers:
-        - name: nginx-container
+        - name: {{ .Values.deployment.systementry.name }}-container
           imagePullPolicy: {{ .Values.deployment.customImagePullPolicy }}
-          image: tharanirajan/{{ .Values.app.prefix }}-appbuilder:1.0
+          image: {{ .Values.deployment.systementry.image }}
           ports:
             - name: http-port
               containerPort: 80
-        - name: apigateway-container
+        - name: {{ .Values.deployment.apigateway.name }}-container
           imagePullPolicy: {{ .Values.deployment.customImagePullPolicy }}
-          image: tharanirajan/{{ .Values.app.prefix }}-apigateway:1.0
+          image: {{ .Values.deployment.apigateway.image }}
           ports:
             - name: http-port
               containerPort: 3000
