pv path changes

--- a/devops/helm/geppetto-stage/values.yaml
+++ b/devops/helm/geppetto-stage/values.yaml
@@ -291,7 +291,7 @@ persistentVolume:
     storage: 5Gi 
   generatedCode:
     storage: 10Gi  
-    path: "/geppetto/generated-code/"  
+    path: "/geppetto/"  
 
 persistentVolumeClaim:
   mongodb:
